--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+      <resource>        
+        <filtering>true</filtering>
+        <directory>${basedir}/src/main/resources</directory>
+        <includes>
+          <include>*.properties</include>
+          <include>*.png</include>
+        </includes>                            
+      </resource>
+    </resources>
     </build>
     <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
