--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.sigma</groupId>
-    <artifactId>QSAB</artifactId>
+    <groupId>com.sigma.qsab</groupId>
+    <artifactId>qsab</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>QSAB</name>
-    <url>http://maven.apache.org</url>
+    <packaging>pom</packaging>
+    <modules>
+        <module>test-library</module>
+        <module>implementation</module>
+        <module>web-start</module>
+    </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.easytesting</groupId>
-            <artifactId>fest-swing-junit</artifactId>
-            <version>1.2.1</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 </project>
