--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -13,10 +13,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.easytesting</groupId>
-            <artifactId>fest-swing-junit</artifactId>
-            <version>1.2.1</version>
+            <groupId>com.sigma.qsab</groupId>
+            <artifactId>test-library</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
