--- a/test-library/pom.xml
+++ b/test-library/pom.xml
@@ -12,10 +12,9 @@
             <version>1.2.1</version>
         </dependency>
         <dependency>
-            <groupId>com.sigma</groupId>
-            <artifactId>QSAB</artifactId>
+            <groupId>com.sigma.qsab</groupId>
+            <artifactId>implementation</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
