Nu kontrolleras det ifall stjärnmärkta fält faktiskt är ifyllda. Det finns även en Glitch för att inte kolla fälten. Har även lagt in en andra bugg för personnummer, som inte kollar personnummer alls. Vi har nu alltså två olika Glitchar som påverkar samma funktion och enbart en av dem kommer användas (den senare i bokstavsordning), men i framtiden kommer bara en komma att kunna väljas.

--- a/implementation/src/main/resources/glitches.properties
+++ b/implementation/src/main/resources/glitches.properties
@@ -1,3 +1,5 @@
-nrofglitches=2
-0=SocialIDGlitch
+nrofglitches=4
+0=NoCheckForSocialIDGlitch
 1=PasswordFieldGlitch
+2=IsMandatoryGlitch
+3=NoFormatCheckForSocialIDGlitch
