--- a/implementation/src/main/resources/strings.properties
+++ b/implementation/src/main/resources/strings.properties
@@ -14,3 +14,4 @@ passwordrepeat=Upprepa l\u00f6senord
 next=N\u00e4sta
 previous=F\u00f6reg\u00e5ende
 superadminaccept=Applicera valda fel
+registererrormessage=Vissa f\u00e4lt har inte fyllts i korrekt.
