Tog bort nrofglitches-propertyn. Abstraherade laddning och instantiering till egna funktioner.

--- a/implementation/src/main/resources/glitches.properties
+++ b/implementation/src/main/resources/glitches.properties
@@ -1,5 +1,5 @@
-nrofglitches=4
 0=NoCheckForSocialIDGlitch
 1=PasswordFieldGlitch
 2=IsMandatoryGlitch
 3=NoFormatCheckForSocialIDGlitch
+4=DoNotComparePasswordsGlitch
