Uppdaterade GUI för att stödja backend och ändrade namn på en variabel så att den var konsekvent med vad den hette i andra klasser.

--- a/implementation/src/main/resources/strings.properties
+++ b/implementation/src/main/resources/strings.properties
@@ -15,3 +15,4 @@ next=N\u00e4sta
 previous=F\u00f6reg\u00e5ende
 superadminaccept=Applicera valda fel
 registererrormessage=Vissa f\u00e4lt har inte fyllts i korrekt.
+chooseglitches=V\u00e4lj buggar
