--- a/implementation/src/main/resources/strings.properties
+++ b/implementation/src/main/resources/strings.properties
@@ -16,3 +16,4 @@ previous=F\u00f6reg\u00e5ende
 superadminaccept=Applicera valda fel
 registererrormessage=Vissa f\u00e4lt har inte fyllts i korrekt.
 chooseglitches=V\u00e4lj buggar
+test=\u00c5 \u00c4 \u00d6 \u00e5 \u00e4 \u00f6
