Lade till några strängar.

--- a/implementation/src/main/resources/strings.properties
+++ b/implementation/src/main/resources/strings.properties
@@ -1,5 +1,6 @@
 login=Logga in
 logout=Logga ut
+cancel=Avbryt
 register=Ny kund
 firstname=F\u00f6rnamn
 lastname=Efternamn
@@ -16,5 +17,6 @@ next=N\u00e4sta
 previous=F\u00f6reg\u00e5ende
 superadminaccept=Applicera valda fel
 registererrormessage=Vissa f\u00e4lt har inte fyllts i korrekt.
+loginerrormessage=Personnummer eller l\u00f6senord \u00f6verensst\u00e4mmer inte med existerande kund.
 chooseglitches=V\u00e4lj buggar
 test=\u00c5 \u00c4 \u00d6 \u00e5 \u00e4 \u00f6
