Fixade generator för propertyfil. Lade glitchar i paket. Ändrade inladdning av glitchar till det nya formatet.

--- a/implementation/src/main/resources/glitches.properties
+++ b/implementation/src/main/resources/glitches.properties
@@ -1,8 +1,10 @@
-0=Login_DoNotComparePasswordsGlitch
-1=Login_IgnoreCaseForComparingPasswordsGlitch
-2=Registration_DoNotCheckIfFieldIsMandatoryGlitch
-3=Registration_DoNotCheckIfSocialIDIsCorrectGlitch
-4=Registration_DoNotCheckIfSocialIDIsCorrectlyFormatedGlitch
-5=Registration_DoNotComparePasswordsGlitch
-6=Registration_IgnoreCaseForComparingPasswordsGlitch
-7=Registration_PasswordsAreVisibleAtFillOutGlitch
+#List of custom glitches.
+#Mon Aug 22 13:01:14 CEST 2011
+6=com.sigma.qsab.glitches.customglitches.registration.IgnoreCaseForComparingPasswordsGlitch
+5=com.sigma.qsab.glitches.customglitches.registration.DoNotComparePasswordsGlitch
+4=com.sigma.qsab.glitches.customglitches.registration.DoNotCheckIfSocialIDIsCorrectlyFormatedGlitch
+3=com.sigma.qsab.glitches.customglitches.registration.DoNotCheckIfSocialIDIsCorrectGlitch
+2=com.sigma.qsab.glitches.customglitches.registration.DoNotCheckIfFieldIsMandatoryGlitch
+1=com.sigma.qsab.glitches.customglitches.login.IgnoreCaseForComparingPasswordsGlitch
+0=com.sigma.qsab.glitches.customglitches.login.DoNotComparePasswordsGlitch
+7=com.sigma.qsab.glitches.customglitches.registration.PasswordsAreVisibleAtFillOutGlitch
