--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
+        <module>glitch-list-generator</module>
         <module>implementation</module>
         <module>test-library</module>
         <module>web-start</module>
