--- a/glitch-list-generator/pom.xml
+++ b/glitch-list-generator/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -16,6 +17,22 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            <plugin>  
+                <groupId>org.codehaus.mojo</groupId>  
+                <artifactId>exec-maven-plugin</artifactId>  
+                <version>1.1.1</version>  
+                <executions>  
+                    <execution>  
+                        <phase>test</phase>  
+                        <goals>  
+                            <goal>java</goal>  
+                        </goals>  
+                        <configuration>  
+                            <mainClass>com.sigma.qsab.GlitchListGenerator</mainClass>   
+                        </configuration>  
+                    </execution>  
+                </executions>  
+            </plugin>          
         </plugins>
-    </build>    
+    </build>        
 </project>
