--- a/test-library/pom.xml
+++ b/test-library/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -20,6 +21,11 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>org.sikuli</groupId>
+            <artifactId>sikuli-script</artifactId>
+            <version>1.0rc2</version>
+        </dependency>
+        <dependency>            
             <groupId>org.easytesting</groupId>
             <artifactId>fest-swing-junit</artifactId>
             <version>1.2.1</version>
