--- a/test-library/test-drivers/pom.xml
+++ b/test-library/test-drivers/pom.xml
@@ -2,12 +2,11 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sigma.qsab</groupId>
-    <artifactId>test-library</artifactId>
+    <artifactId>test-drivers</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>gui-drivers</module>
-        <module>test-drivers</module>        
+        <module>junit</module>        
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
