--- a/test-library/test-drivers/pom.xml
+++ b/test-library/test-drivers/pom.xml
@@ -6,7 +6,8 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>junit</module>        
+        <module>cucumber</module>
+        <module>junit</module>          
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
