--- a/test-library/test-drivers/junit/pom.xml
+++ b/test-library/test-drivers/junit/pom.xml
@@ -6,6 +6,10 @@
     <artifactId>junit</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
     <build>
         <plugins>
             <plugin>
