--- a/web-start/pom.xml
+++ b/web-start/pom.xml
@@ -5,4 +5,8 @@
     <artifactId>web-start</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
 </project>
