Började leka med UISpec4J. Ger konstiga fel, men skall jobbas mer på. Fick ändra strukturen för GUIRunner och döpa om två funktioner som en "bonus".

--- a/test-library/gui-drivers/pom.xml
+++ b/test-library/gui-drivers/pom.xml
@@ -8,7 +8,9 @@
     <modules>
         <module>gui-runner</module>
         <module>fest</module>
-        <module>sikuli</module>        
+        <module>sikuli</module>     
+        <module>uispec4j</module>
+        <module>marathon</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
