--- a/test-library/gui-drivers/uispec4j/pom.xml
+++ b/test-library/gui-drivers/uispec4j/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sigma.qsab</groupId>
-    <artifactId>junit</artifactId>
+    <artifactId>uispec4j</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -21,13 +21,36 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            <plugin>                
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-    <dependencies>
+    <dependencies>  
+        <dependency>
+            <groupId>org.uispec4j</groupId>
+            <artifactId>uispec4j</artifactId>
+            <version>2.4</version>
+        </dependency>
         <dependency>
             <groupId>com.sigma.qsab</groupId>
             <artifactId>implementation</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.sigma.qsab</groupId>
@@ -35,33 +58,6 @@
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
             <classifier>tests</classifier>
-        </dependency>
-        <dependency>
-            <groupId>com.sigma.qsab</groupId>
-            <artifactId>fest</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
-            <classifier>tests</classifier>
-        </dependency>
-        <dependency>
-            <groupId>com.sigma.qsab</groupId>
-            <artifactId>sikuli</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
-            <classifier>tests</classifier>
-        </dependency>
-        <dependency>
-            <groupId>com.sigma.qsab</groupId>
-            <artifactId>uispec4j</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
-            <classifier>tests</classifier>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
