Fixat klart med loginverifikation.

--- a/test-library/gui-drivers/sikuli/pom.xml
+++ b/test-library/gui-drivers/sikuli/pom.xml
@@ -53,5 +53,11 @@
             <scope>test</scope>
             <classifier>tests</classifier>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
