Nu funkar Robot Framework, förutom för Sikuli. Fixade öven så JUnit körde en verifiering på log in. Alla testverktyg kör nu UISpec4J för hasighet.

--- a/test-library/test-drivers/robotframework/pom.xml
+++ b/test-library/test-drivers/robotframework/pom.xml
@@ -48,13 +48,13 @@
             <scope>test</scope>
             <classifier>tests</classifier>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>com.sigma.qsab</groupId>
             <artifactId>fest</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
             <classifier>tests</classifier>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>com.sigma.qsab</groupId>
             <artifactId>sikuli</artifactId>
@@ -69,11 +69,11 @@
             <scope>test</scope>
             <classifier>tests</classifier>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.robotframework</groupId>
             <artifactId>robotframework</artifactId>
