--- a/test-library/test-drivers/pom.xml
+++ b/test-library/test-drivers/pom.xml
@@ -6,6 +6,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
+        <module>robotframework</module>
         <module>cucumber</module>
         <module>junit</module>          
     </modules>
